--- a/css/C_form.css
+++ b/css/C_form.css
@@ -1,10 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    /* margin: 50px; */
     background-color: transparent;
 }
 
-form {
+/* form {
     max-width: 1325px;
     margin: auto;
     padding: 20px;
@@ -13,11 +12,11 @@ form {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-wrap: wrap;
-}
-#content{
+} */
+/* #content{
   margin-left:9.5%;
-}
-#form-section{
+} */
+/* #form-section{
 overflow-y: auto;
 width: 80%;
 margin-left:30%;
@@ -27,8 +26,7 @@ margin-left:30%;
 #form-section textarea {
   width: 50%;
     margin-bottom: 10px;
-    /* margin-left: 10px; */
-}
+} */
 h2 {
     width: 100%;
     text-align: center;
@@ -37,12 +35,12 @@ h2 {
     color: #007bff;
 }
 
-label {
+/* label {
     width: calc(50% - 12px);
     margin-bottom: 12px;
     font-weight: bold;
     color: #333;
-}
+} */
 
 input,
 select {
@@ -55,7 +53,7 @@ select {
     box-sizing: border-box;
 }
 
-textarea {
+/* textarea {
     width: 50%;
     resize: vertical;
     height: 100px;
@@ -64,24 +62,24 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-}
-.submitbtn{
+} */
+/* .submitbtn{
     width: 10%;
     margin:20px auto;
     border-radius: 10px;
-}
+} */
  
 
 
 
 
  /* Additional styling for the buttons */
- #button-container {
+ /* #button-container {
     display: flex;
     margin-left: 43px;
     
-}
-.toggle-button {
+} */
+/* .toggle-button {
     width: 10%;
     font-size: 12px;
     margin: 5% 0  0 0%;
@@ -90,7 +88,6 @@ textarea {
     background-color: white;
     color: gray;
     cursor: pointer;
-    /* border-radius: 5px; */
     transition: background-color 0.3s;
 }
 
@@ -98,22 +95,21 @@ textarea {
     background-color: #bbb;
 }
 .toggle-button.selected {
-    color: black; /* Change text color for selected button */
-    background-color: #bbb; /* Change background color for selected button */
-}
+    color: black; 
+    background-color: #bbb; 
+} */
 /* mark area 
 */
 
-.markbtn{
+/* .markbtn{
     width: 100%;
-    /* margin:20px auto; */
     border-radius: 10px;
     color:gray ;
-} 
-.form-paragraph {
+}  */
+/* .form-paragraph {
     display: block;
-}
-.toggle-btn {
+} */
+/* .toggle-btn {
     width: 10%;
     font-size: 12px;
     margin: 2% 0  0 0%;
@@ -122,22 +118,21 @@ textarea {
     background-color: #bbb;
     color: black;
     cursor: pointer;
-    /* border-radius: 5px; */
     transition: background-color 0.3s;
-}
+} */
 
-.toggle-btn:hover {
+/* .toggle-btn:hover {
     color: white;
 }
 .toggle-btn.selected {
-    color: black; /* Change text color for selected button */
-    background-color: #bbb; /* Change background color for selected button */
-}
+    color: black; 
+    background-color: #bbb;
+} */
 a{
     text-decoration: none;
 }
 
-.toggle-btn1 {
+/* .toggle-btn1 {
     width: 23%;
     height: 40px;
     font-size: 10px;
@@ -146,9 +141,8 @@ a{
     background-color: #bbb;
     color: black;
     cursor: pointer;
-    /* border-radius: 5px; */
     transition: background-color 0.3s;
-}
+} */
 
 
 .popup-container {
@@ -192,18 +186,6 @@ a{
     box-sizing: border-box
 }
 
-body {
-    position: relative;
-    margin: var(--header-height) 0 0 0;
-    padding: 0 1rem;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    transition: .5s
-}
-
-a {
-    text-decoration: none
-}
 
 .input-group {
     display: flex;
@@ -238,19 +220,19 @@ a {
     border-radius:5px ;
 }
 
-.nav_link:hover {
+/* .nav_link:hover {
     color: var(--white-color)
-}
+} */
 
 .nav_icon {
     font-size: 1.25rem
 }
 
-.show {
+/* .show {
     left: 0
-}
+} */
 
-
+/* 
 .active {
     color: var(--white-color)
 }
@@ -266,15 +248,14 @@ a {
 
 .height-100 {
     height: 100vh
-}
+} */
 
 
-@media screen and (min-width: 768px) {
-    body {
+/* @media screen and (min-width: 768px) { */
+    /* body {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
-        /* padding-left: calc(var(--nav-width) + 2rem) */
-    }
-
+    } */
+/* 
     .header {
         height: calc(var(--header-height) + 1rem);
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
@@ -301,25 +282,25 @@ a {
     }
 
     
-}
+} */
 
 /* subdropdown css */
-.dropdown-menu {
+/* .dropdown-menu {
     position: relative;
-}
+} */
 
-.sub-dropdown-menu {
+/* .sub-dropdown-menu {
     display: none;
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 120px; /* Adjust width as needed */
+    min-width: 120px; 
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000; /* Ensure it's above other elements */
-}
+    z-index: 1000; 
+} */
 
-.dropdown-menu li:hover .sub-dropdown-menu {
+/* .dropdown-menu li:hover .sub-dropdown-menu {
     display: block;
 }
 
@@ -332,7 +313,7 @@ a {
 
 .sub-dropdown-menu li:hover {
     background-color: #f0f0f0;
-}
+} */
 
 /* popup */
 .custom-modal-class {
@@ -762,7 +743,7 @@ a {
 
     #map {
     top: 0px;
-    left: -12%;
+    left: 0;
     height: 100vh;
     width: 100vw;
     z-index: 0;
@@ -810,7 +791,7 @@ a {
       width: 0;
       position: fixed;
       z-index: 1;
-      left: 70px;
+      left: 20px;
       background-color: #f3f3f3;
       overflow-x: hidden;
       transition: 0s;
@@ -872,7 +853,7 @@ a {
       left: 30px;
       right: 30px;
     }
-
+ 
     @media screen and (max-height: 450px) {
       .sidebar {
         padding-top: 15px;
@@ -887,7 +868,7 @@ a {
       position: sticky;
       top: 0;
       z-index: 1;
-    }
+    } 
 
     
 #paginationControls button {
@@ -1002,11 +983,7 @@ button, input, optgroup, select, textarea {
       /* padding: 5px; */
     
       }
-      /* .popup-table td {
-        border-right: 1px solid; 
-        padding: 7px;
-        vertical-align: middle;
-      } */
+    
 
       .leaflet-popup-content {
         margin: 13px 24px 13px 20px;
@@ -1035,44 +1012,26 @@ button, input, optgroup, select, textarea {
     }
     .select2-container--open .select2-dropdown {
       left: -32px;
-  }
-  .accordion-header {
-    margin-bottom: 0;
-    margin-top: 2px;
-}
-.popup-table tr td:not(:last-child) {
-  border-right: 1px solid ; 
-  padding: 7px;
+      }
+      .accordion-header {
+        margin-bottom: 0;
+        margin-top: 2px;
+    }
+    .popup-table tr td:not(:last-child) {
+      border-right: 1px solid ; 
+      padding: 7px;
 
-}
+    }
 
 
 
 /* accordation */
 
 .accordion {
-  --bs-accordion-color: var(--bs-body-color);
-  --bs-accordion-bg: var(--bs-body-bg);
-  --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
-  --bs-accordion-border-color: var(--bs-border-color);
-  --bs-accordion-border-width: var(--bs-border-width);
-  --bs-accordion-border-radius: var(--bs-border-radius);
-  --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
-  --bs-accordion-btn-padding-x: 1.25rem;
-  --bs-accordion-btn-padding-y: 1rem;
-  --bs-accordion-btn-color: var(--bs-body-color);
-  --bs-accordion-btn-bg: var(--bs-accordion-bg);
+  
   --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-  --bs-accordion-btn-icon-width: 1.2rem;
-  --bs-accordion-btn-icon-transform: rotate(-180deg);
-  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-  --bs-accordion-btn-focus-border-color:#00008b;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  --bs-accordion-body-padding-x: 1.25rem;
-  --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: var(--bs-primary-text-emphasis);
-  --bs-accordion-active-bg: var(--bs-primary-bg-subtle);
+  --bs-accordion-btn-icon-width: 1rem;
+ 
 }
 
 .accordion-button {
@@ -1080,6 +1039,23 @@ button, input, optgroup, select, textarea {
   font-size: 13px;
   height: 30px;
   font-size: 13px;
-  color: darkblue;
+  color: grey;
   font-weight:bold;
+}
+/* header project counts */
+.tablestats{
+  border: 2px solid darkblue;
+  position: fixed;
+  color: #04c;
+  font-size: 100%;
+  /* background-color: rgba(173, 216, 230, 0.5); */
+  background-color: #c8d7abd4;
+  font-weight: bold;
+  top: 2%;
+  right: 45%;
+  padding: 3px;
+  border-radius: 5px 5px;
+  z-index: 9999;
+  text-shadow: black;
+  text-transform: uppercase;
 }
