--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -38,7 +38,7 @@ body {
 }
 
 
-.search-bar {
+/* .search-bar {
   display: flex;
   gap: 10px;
   margin-bottom: 20px;
@@ -55,7 +55,7 @@ body {
   background-color: #4caf50;
   color: white;
   cursor: pointer;
-}
+} */
 
 .main-content {
   display: flex;
@@ -79,7 +79,8 @@ body {
 }
 
 .tablestats {
-  color: #04c;
+  /* color: #04c; */
+  color: darkblue;
   font-size: 53%;
   font-weight: bold;
   padding: 3px;
@@ -92,7 +93,8 @@ body {
   width: 20vw;
   margin-left: -5vw;
   background-color: white;
-  /* padding: 20px; */
+  padding: 20px;
+  /* overflow: scroll; */
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   opacity: 0;
@@ -100,10 +102,12 @@ body {
 }
 
 .filters h3 {
+  font-size: 15px;
   margin-top: 15px;
 }
 
 .showCount {
+  margin-top: 2%;
   background-color: #9393d633;
   padding: 10px;
   border-radius: 5px;
@@ -155,8 +159,7 @@ body {
 
 .leaflet-control-zoom {
   position: absolute;
-  /* left: 95vw;
-    top: 80vh; */
+ 
   border: 2px solid darkblue;
   color: darkblue;
 }
@@ -169,7 +172,6 @@ body {
   top: 22vh;
   width: auto;
   padding: 6px;
-  /* height: 5.5%; */
   right: 10px;
   background-color: white;
   border-radius: 5px;
@@ -177,59 +179,9 @@ body {
 }
 
 .tablebtn {
-  /* padding: 5px; */
   width: 20px;
   height: 20px;
 }
-
-#table-container-dashboard {
-  position: absolute;
-  transition: 0s;
-  top: 60%;
-  right: 3%;
-  font-size: 10px;
-  z-index: 9999;
-  width: 500px;
-}
-
-#closeTableBtnDashboard {
-  color: white;
-  font: 14px bold;
-  border: 2px solid red;
-  padding: 8px;
-  background: red;
-  border-radius: 50%;
-  top: 21px;
-  position: absolute;
-  right: 1px;
-  z-index: 1;
-}
-#closeTableBtnDashboard i {
-  position: absolute;
-  top: 2px;
-  right: 2px;
-}
-
-#workTableDashboard {
-  left: 0px;
-  font-size: 8px;
-  height: 100px;
-  width: 100px;
-  overflow: scroll;
-}
-
-/* #printButton{
-    position: absolute;
-     top: 0%; 
-      right: 7%;
-       z-index: 999;
-        color: green; 
-        font-size: 12px;
-        border: none;
-         background-color: transparent;
-          height: 29px;
-     width: 35px;
-} */
 
 table.dataTable tbody th, table.dataTable tbody td {
   padding: 30px 10px;
@@ -289,30 +241,27 @@ table.dataTable tbody th, table.dataTable tbody td {
     cursor: pointer;
     position: relative;
 }
+
 .filter-group input[type="text"] {
-    width: 80%;
-    padding: 5px;
-    margin-bottom: 10px;
-    font-size: 12px;
-    font-weight: bold;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    display: none;
-}
-.filter-group input[type="text"].active {
-  display: block; /* Show the input field when it has the 'active' class */
+  width: 80%;
+  padding: 5px;
+  margin-bottom: 10px;
+  font-size: 12px;
+  font-weight: bold;
+  display: none;
+  border-radius: 8px;
+  border: 2px solid #bbb;
 }
 .filter-group ul {
-    list-style-type: none;
-    padding: 0;
-    display: none;
+  list-style-type: none;
+  padding: 0;
+  display: none;
 }
-/* .filter-group ul.active,
+.filter-group ul.active,
 .filter-group input[type="text"].active {
-    display: block;
-     forced-color-adjust: blue; 
-} */
+  display: block;
+  forced-color-adjust: blue;
+}
 .filter-group li {
     margin-bottom: 5px;
 }
@@ -381,153 +330,154 @@ thead th {
 #tablecontainer {
   z-index: 9999;
   position: absolute;
-  width: 45%;
-  bottom: 0%;
+  width: 53%;
+  bottom: 20%;
   right: 20%;
- background-color: white;
-  padding: 5px;
+  background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-height: 300px;
-  overflow-y: auto; 
+  max-height: 200px;
+  font-size: 10px;
+
 
 }
-.minimize-button {
 
-  background-color: #506be7;
+
+.tableDetail {
+  max-height: 550px; 
+  overflow-y: auto; 
+  /* margin-top: 10px;  */
+  border: 1px solid #ccc; 
+  background-color: #f9f9f9; 
+
+}
+
+.minimize-button {
+  background-color: darkblue;
   color: white;
   border: none;
   padding: 5px;
   cursor: pointer;
   font-size: 15px;
-  border-radius: 50%; 
-
- 
-  position: fixed; 
-  right: 21%; 
-  z-index: 1000; 
-
- 
-  width: 27px; 
-  height: 27px; 
-
-  
+  border-radius: 50%;
+  position: fixed;
+  right: 19.5%;
+  z-index: 1000;
+  width: 27px;
   display: flex;
   justify-content: center;
   align-items: center;
-
-
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.dataTables_info{
-font-size: 13px !important;
-}
-#data-table_paginate{
-font-size: 13px !important;
-}
-.dataTables_wrapper .dataTables_filter input {
-  border: 1px solid #aaa;
-  border-radius: 3px;
-  padding: 5px;
-  height: 29px !important;
-  background-color: transparent;
-  margin-left: 3px;
-  background-color: white;
-}
-
-
-
+  bottom:43%;
+} 
 
 .data-table {
-  /* width: 70% !important; */
+  width: 100%;
   border-collapse: collapse;
-  margin-top: 40px; 
-  font-size: 11px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.data-table thead tr {
-  /* background-color: #506be7; */
-  color: #ffffff;
-  text-align: left;
-  font-weight: bold;
-  cursor: pointer; 
 }
 
 .data-table th, .data-table td {
-  padding: 8px 10px;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
-.data-table tbody tr {
-  border-bottom: 1px solid #dddddd;
-  background-color: white;
-}
-#tablecontainer .data-table {
-  max-height: 200px; 
-  overflow-y: auto;
-}
-
-
-#pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  z-index: 9999;
-  position: absolute;
-  bottom: 0%;
-  right: 1%;
-}
-
-/* Pagination buttons */
-#pagination button {
-  background-color: #007bff;
-  border: none;
-  color: white;
-  padding: 10px 15px;
-  margin: 0 5px;
+.data-table th {
+  /* background-color: #f2f2f2; */
+  background-color: #9393d633;
+  color: darkblue;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+
+.dataTables_wrapper .dataTables_scrollHead {
+  overflow: visible;
+}
+
+.dataTables_wrapper .dataTables_scrollBody {
+  overflow: auto;
+  scrollbar-width: thin;
+  text-align: center;
+  height: 248px;
+  max-height: 248px; /* Match this with the tableDetail max-height */
+}
+
+.dataTables_wrapper .dataTables_scrollFoot {
+  overflow: visible;
+}
+
+
+
+/* table------------------------------------------- */
+.leaflet-popup-content-wrapper {
+  padding: 1px;
+  text-align: left;
+  height: auto;
+  max-height: 369px;
+  border-radius: 12px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin;
+  width: auto;
+  max-width: 420px;
   font-size: 10px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
 }
 
-#pagination button:hover {
-  background-color: #0056b3;
+.leaflet-popup-content-wrapper tr,
+td {
+  border-bottom: 1px solid;
+  padding: 5px;
+  margin-left: 2px;
 }
 
-#pagination button.active {
-  background-color: #0056b3;
-}
-
-#pagination button:disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
-}
-.dataTables_wrapper .dataTables_filter {
-  float: left !important;
-  width: 75%;
-  text-align: right !important;
-  font-size: 13px !important;
-  position: sticky !important;
-  z-index: 3;
-  top: 0;
-  background-color: white;
-}
-.dataTables_wrapper .dataTables_length {
-  float: left !important;
-  text-align: right !important;
-  font-size: 13px !important;
-  position: sticky !important;
-  z-index: 3;
-  top: 0;
-  background-color: white;
-  /* background: #fff;  */
-  /* padding: 10px 0; */
+.leaflet-popup-content-wrapper tr td:not(:last-child) {
+  border-right: 1px solid;
 }
 
 
+.geopulseaname {
+  color: darkblue;
+  position: fixed;
+  z-index: 99999;
+  bottom: 0px;
+  right: 15px;
+  font-weight: bold;
+  font-size: 10px;
+}
+
+
+.logopng {
+  height: 60px;
+  width: 60px;
+  border-radius: 10px;
+  padding: 5px;
+  position: absolute;
+  z-index: 9999;
+  top:0%;
+  left: 2%;
+}
+
+
+#autocomplete-list{
+  position: absolute;
+  z-index: 9999;
+  margin-left: 5px;
+  height: auto;
+  /* font-weight: lighter; */
+  border-radius: 10px;
+  width: auto;
+  /* position: absolute; */
+  z-index: 9999;
+  top: 6.5%;
+  left: 18%;
+  background-color: #fff;
+  width: 250px;
+  max-width: 250px;
+  max-height: 400px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  line-height: 2.5;
+
+}
