--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -94,7 +94,6 @@ body {
   margin-left: -5vw;
   background-color: white;
   padding: 20px;
-  /* overflow: scroll; */
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   opacity: 0;
@@ -159,7 +158,6 @@ body {
 
 .leaflet-control-zoom {
   position: absolute;
- 
   border: 2px solid darkblue;
   color: darkblue;
 }
@@ -281,7 +279,8 @@ color: black; /* Default color */
 .abcscroll {
     height: auto;
     max-height: 200px;
-    overflow-x: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     scrollbar-width: thin; /* For Firefox */
     scrollbar-color: #888 #f1f1f1; /* For Firefox */
 }
@@ -332,13 +331,13 @@ thead th {
   position: absolute;
   width: 53%;
   bottom: 20%;
-  right: 20%;
+  right: 1%;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   max-height: 200px;
   font-size: 10px;
-
+  transition: all 0.3s ease;
 
 }
 
@@ -359,16 +358,18 @@ thead th {
   padding: 5px;
   cursor: pointer;
   font-size: 15px;
-  border-radius: 50%;
-  position: fixed;
-  right: 19.5%;
+  /* border-radius: 50%; */
+  position: absolute;
+  right: 0%;
+  top:0%;
   z-index: 1000;
   width: 27px;
+  height:28px;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  bottom:43%;
+  
 } 
 
 .data-table {
@@ -414,13 +415,13 @@ thead th {
   padding: 1px;
   text-align: left;
   height: auto;
-  max-height: 369px;
+  max-height: 400px;
   border-radius: 12px;
   overflow-y: scroll;
   overflow-x: hidden;
   scrollbar-width: thin;
   width: auto;
-  max-width: 420px;
+  max-width: 400px;
   font-size: 10px;
 }
 
