--- a/css/geo_mobview.css
+++ b/css/geo_mobview.css
@@ -69,7 +69,7 @@ body {
 #workDetailsModal {
     position: absolute;
     z-index: 99999;
-    height: 76vh;
+    height: 100vh;
     top: 71px;
     overflow: auto;
     scrollbar-width: thin;
@@ -448,9 +448,9 @@ form {
     margin-right: 10px;
 }
 
-.leaflet-interactive {
+/* .leaflet-interactive {
     transform: scale(1.2);
-}
+} */
 #formButton{
    
         position: absolute;
